# tic_tac_toe_model_serve

./: .coverage  .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  MLOPS_ROADMAP.md  README.md  app.py  config.yml  coverage.xml  dockerfile  pyproject.toml  requirements.txt  saved_q_values.pkl  start.sh
.gemini/: settings.json
.github/workflows/: tests.yml
src/: auth.py  config_loader.py  dependencies.py  logging_config.py  logging_intercept.py  middleware.py  prediction_agent.py  schemas.py  valid_state_check.py
src/errors/: error_class.py  error_handlers.py
tests/: test_api.py
tic_tac_toe_model_serve/: auth.py  config_loader.py  dependencies.py  load_q_values.py  logging_config.py  middleware.py  prediction_agent.py  schemas.py  settings.py  valid_state_check.py
tic_tac_toe_model_serve/errors/: error_class.py  error_handlers.py
